--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,7 @@ plugins = fastclasses_json/mypy_plugin.py
 
 [flake8]
 exclude = .git,__pycache__,build,dist,venv
+
+[tool:pytest]
+markers =
+    dateutil
