--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,19 @@ plugins = fastclasses_json/mypy_plugin.py
 
 [flake8]
 exclude = .git,__pycache__,build,dist,venv
+
+[coverage:run]
+branch = False
+source =
+    fastclasses_json
+
+[coverage:report]
+exclude_lines =
+
+    # Don't complain if non-runnable code isn't run:
+    if 0:
+    if __name__ == .__main__.:
+    if False:
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
