--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -34,8 +34,8 @@ jobs:
         pytest
     - name: Test mypy module
       run: |
-        pip install mypy types-python-dateutil
-        mypy tests/for_type_checking.py
+        pip install mypy
+        mypy --install-types --non-interactive tests/for_type_checking.py
     - name: Test with dateutil
       run: |
         pip install pytest python-dateutil
