support for int, bool and float keys

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,8 @@ plugins = fastclasses_json/mypy_plugin.py
 
 [flake8]
 exclude = .git,__pycache__,build,dist,venv
+ignore = E731,W503
+max-line-length = 90
 
 [coverage:run]
 branch = False
